styles/styles.css
/* ... */
.header__container-left {
  margin-left: 10px;
}
.header__container-logo img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin: 10px;
  box-shadow: -5px 0px rgb(6, 94, 162);
  object-fit: cover;
  filter: drop-shadow(1px 1px 4px #56a5c9);
}

.header__container-right {
  display: flex;
  flex-direction: column;
}

.header__container-right h1 {
  display: none;
}

.header__container-right .header__container-navbar {
  display: none;
}
.bg-body-tertiary {
  --bs-bg-opacity: 0;
}
.navbar-brand {
  color: white;
  margin-left: auto;
  font-size: 15px;
  margin-bottom: 0;
  font-family: Plus Jakarta Sans;
  text-transform: uppercase;
  color: #f7f6f6;
  filter: drop-shadow(1px 2px 5px #101939);
}
.navbar-brand:hover {
  color: white;
}
.navbar-toggler {
  background-color: rgb(248, 244, 244);
  border-color: white;
  margin-left: 20px;
  padding: 5px;
}
.navbar-toggler-icon {
  width: 1em;
}
.nav-link {
  color: white;
}
.navbar-nav .nav-link.active {
  color: orange;
  text-decoration: underline;
}

.header__container-navbar-mobile {
  display: flex;
  flex-direction: column;
  padding-right: 10px;
}

.bi {
  color: #fff;
  background-color: #0844a4;
  border-radius: 5px;
  padding: 5px;
}

/* MAIN INDEX */

/* Contenedor padre */
.main {
  max-width: 1200px;
  margin: 0 auto;
  align-items: center;
  justify-content: space-between;
}
.main__container {
  display: flex;
  flex-direction: column;
}

/* Contenedores hijos */
.main__container-left {
  display: flex;
  flex-direction: column;
  justify-content: start;
  margin: 10px 15px;
}

.main__container-left-top h1 {
  font-size: 50px;
  font-weight: lighter;
  color: #0844a4;
  line-height: 1;
}

.main__container-left-top h2 {
  font-size: 40px;
  font-weight: lighter;
  color: #0844a4;
  line-height: 1;
}
.main__container-left-top p {
  margin-top: 30px;
  font-size: 20px;
  color: #0844a4;
}
.main__container-left-down {
  display: flex;
  align-content: flex-start;
}
.main__container-left-down ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.main__container-left-down ul li {
  list-style: none;
  font-size: 16px;
  color: #0844a4;
  text-shadow: 1px 0px #9ab8e9;
}
.main__container-right {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.main__container-right img {
  max-width: 100%;
  border-radius: 15px;
  padding: 10px;
}
/* FOOTER INDEX*/

.footer {
  max-width: 1200px;
  margin: 0 auto;
}
.footer__container {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: 50px;
  justify-content: space-between;
}

.footer__container-left {
  display: flex;
  flex-direction: row;
  margin-left: 25px;
}
.footer__container-left button:hover {
  color: rgb(242, 237, 236);
  font-size: 16px;
  background-color: rgb(10, 133, 228);
}

.footer__container-left button {
  font-size: 16px;
  margin: 5px 5px;
  padding: 15px;
  border: #a0e4cbcd;
  font-family: Plus Jakarta Sans;
  color: #f7f6f6;
  background-color: #0844a4;
  border-radius: 10px;
  box-shadow: 5px 5px 5px rgb(181, 180, 180);
}

.footer__container-right {
  display: flex;
  flex-direction: row;
  align-items: end;
  justify-content: center;
  font-size: 12px;
  margin: 10px;
}
.footer__container-right small {
  color: #0844a4;
}

/* MAIN ABOUT */

.main {
  max-width: 1200px;
  margin: 0 auto;
}
.main__container-about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
  margin: 5px 20px;
}
.main__container-about--top-left {
  margin-top: 0px;
}

.main__container-about--top-left h3,
h2 {
  font-size: 20px;
  font-weight: lighter;
  color: #0844a4;
}
.main__container-about--top-left p {
  padding-top: 10px;
  font-family: Plus Jakarta Sans;
  font-size: 16px;
  color: #0844a4;
}

.main__container-about--top-left button {
  width: 80%;
  margin: 5px 25px;
  padding: 5px;
  font-family: Plus Jakarta Sans;
  font-size: 16px;
  color: #f7f6f6;
  background-color: #0844a4;
  border: #0844a4;
  border-radius: 50px;
  box-shadow: 10px 5px 5px rgb(181, 180, 180);
}

.main__container-about--top-left button:hover {
  color: rgb(242, 237, 236);
  background-color: rgb(10, 133, 228);
  font-size: 16px;
  box-shadow: 10px 5px 5px (10, 133, 228);
}

.main__container-about--top-right img {
  width: 100%;
  border-radius: 20px;
  margin-top: 5px;
  box-shadow: 10px 5px 5px rgb(181, 180, 180);
  object-fit: cover;
}

.main__container-about--down-left img {
  display: none;
}

.main__container-about--mobile img {
  width: 100%;
  border-radius: 20px;
  box-shadow: 10px 5px 5px rgb(181, 180, 180);
  object-fit: cover;
}
.main__container-about--down-right h3 {
  margin: 10px;
  font-size: 20px;
  font-weight: lighter;
  color: #0844a4;
}
.main__container-about--down-right p {
  margin: 10px;
  padding-top: 5px;
  font-family: Plus Jakarta Sans;
  font-size: 16px;
  color: #0844a4;
}

.main__container-about--down-right button {
  width: 80%;
  margin: 5px 25px;
  padding: 5px;
  font-family: Plus Jakarta Sans;
  font-size: 16px;
  color: #f7f6f6;
  background-color: #0844a4;
  border: #a0e4cbcd;
  border-radius: 50px;
  box-shadow: 10px 5px 5px rgb(181, 180, 180);
}
.main__container-about--down-right button:hover {
  color: rgb(242, 237, 236);
  background-color: rgb(10, 133, 228);
  font-size: 16px;
  box-shadow: 10px 5px 5px rgb(181, 180, 180);
}

/*FOOTER ABOUT */
.footer__about {
  max-width: 1200px;
  height: auto;
  margin: 0 auto;
  display: flex;
  align-items: end;
  justify-content: center;
  margin-bottom: 20px;
}
.footer__container-about small {
  color: #0844a4;
  padding: 10px;
  font-size: 11px;
}

/* MAIN ADVANTAGES */

.main__advantages {
  display: flex;
  max-width: 1200px;
  margin: 0 auto;
}
.main__advantages-container {
  display: flex;
  flex-direction: column;
}
.main__advantages-container-top {
  display: block;
  justify-content: start;
}
/* ... */

